fix sizing and spacing of buttons

--- a/pages/game.css
+++ b/pages/game.css
@@ -16,9 +16,12 @@ html, body {
 .choice-container{
     display: flex;
 }
-.choice-container * {
-    padding-left: 20px;
-    padding-right: 20px;
+.choice-container button {
+    width: 150px; /* Adjust the width as needed */
+    height: 150px; /* Adjust the height as needed */
+    padding: 10px;
+    margin: 5px;
+
 }
 @media screen and (max-width: 500px) {
   
@@ -28,4 +31,7 @@ html, body {
         width: 70%;
     }
 }
-
+.icon{
+    width: 50px;
+    height: 50px;
+}
